assets/sticky-cart.css
.xo-sticky-cart .xo-field-select-custom__trigger {
  width: 100%;
  min-width: 17.5rem;
}
.xo-sticky-cart .xo-field-select-custom__popover {
  min-width: unset;
  width: var(--xo-popover-trigger-width);
}
@media (max-width: 1199px) {
  .xo-sticky-cart .xo-field-select-custom__popover {
    padding: 1.6rem;
  }
}

.xo-sticky-cart__inner {
  max-width: 100rem;
  margin: auto;
  padding: 4rem 0.5rem 0.5rem 0.5rem;
}

.xo-sticky-cart__inner--radius .xo-sticky-cart__grid {
  border-radius: 1.2rem;
  overflow: hidden;
}

.xo-sticky-cart__inner--modifier {
  max-width: 130rem;
}

.xo-sticky-cart__grid {
  padding: clamp(1rem, calc(1vw + 0.6rem), 1.8rem);
  background-color: color-mix(in srgb, rgba(var(--color-background)) calc(1 * 100%), transparent);
  box-shadow: 0px 4px 29px 0px rgba(var(--color-overlay), 0.15);
}

.xo-sticky-cart__product-info {
  height: 100%;
  border-right: 0.1rem solid rgba(var(--color-border), 0.2);
}

.xo-sticky-cart__product-wrapper {
  display: flex;
  gap: 1.3rem;
  padding-inline-end: 1.2rem;
  height: fit-content;
}

.xo-sticky-cart__info-image {
  width: 9.4rem;
  height: 9.4rem;
}
.xo-sticky-cart__info-image .xo-image,
.xo-sticky-cart__info-image .xo-image__placeholder,
.xo-sticky-cart__info-image .placeholder-svg,
.xo-sticky-cart__info-image img {
  width: 100%;
  height: 100%;
}

.xo-sticky-cart__info-box {
  display: flex;
  flex-direction: column;
  gap: 0.8rem;
}
@media (min-width: 992px) {
  .xo-sticky-cart__info-box {
    justify-content: space-between;
    gap: 2rem;
    padding-bottom: 0.6rem;
  }
}

.xo-sticky-cart__info-category {
  color: color-mix(in srgb, rgba(var(--color-foreground)) calc(1 * 100%), transparent);
  font-weight: 500;
  font-size: calc(var(--font-body-scale) * 1.4rem);
  line-height: calc(1 + 0.5 / var(--font-body-scale));
  opacity: 0.5;
  padding-bottom: 0.1rem;
}

.xo-sticky-cart__info-title {
  color: color-mix(in srgb, rgba(var(--color-foreground)) calc(1 * 100%), transparent);
  font-weight: 500;
  font-size: calc(var(--font-body-scale) * 1.6rem);
  line-height: calc(1 + 0.3 / var(--font-body-scale));
  word-break: break-word;
  word-wrap: break-word;
  opacity: 0.85;
}
@media (min-width: 768px) {
  .xo-sticky-cart__info-title {
    font-size: calc(var(--font-body-scale) * 1.8rem);
  }
}

.xo-sticky-cart__info-price .xo-price__sale {
  flex-direction: row-reverse;
  flex-wrap: wrap;
  justify-content: start;
}

.xo-sticky-cart__product-variant {
  display: flex;
  align-items: center;
}

.xo-sticky-cart__variant-group {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  gap: 2.4rem;
  row-gap: 1.2rem;
}
@media (max-width: 767px) {
  .xo-sticky-cart__variant-group {
    flex-direction: column;
  }
}
.xo-sticky-cart__variant-group .xo-product-variant__value-selected {
  display: none;
}
.xo-sticky-cart__variant-group .xo-product-variant__inner {
  flex-direction: column;
  align-items: start;
  gap: 1.6rem;
}
.xo-sticky-cart__variant-group .xo-product-variant__inner-name,
.xo-sticky-cart__variant-group .xo-product-variant__top-name {
  padding-bottom: 0.8rem;
  color: rgba(var(--color-foreground), 0.65);
  font-size: calc(var(--font-body-scale) * 1.4rem);
  font-weight: 500;
  line-height: calc(1 + 0.4 / var(--font-body-scale));
  text-transform: uppercase;
}
.xo-sticky-cart__variant-group .xo-product-variant__inner-value {
  display: flex;
  flex-wrap: wrap;
  align-items: start;
  justify-content: start;
  gap: 0.4rem;
}
.xo-sticky-cart__variant-group .xo-product-variant__inner-value .xo-field-radio--radio,
.xo-sticky-cart__variant-group .xo-product-variant__inner-value .xo-field-radio--boxed {
  padding-inline-end: 0.5rem;
}
.xo-sticky-cart__variant-group .xo-product-variant__inner-value .xo-field-radio--radio:last-child,
.xo-sticky-cart__variant-group .xo-product-variant__inner-value .xo-field-radio--boxed:last-child {
  padding-inline-end: 0;
}

.xo-sticky-cart__product-action {
  display: flex;
  align-items: center;
}

.xo-sticky-cart__action-group {
  width: 100%;
}

.xo-sticky-cart__action-quantity {
  height: 100%;
}
.xo-sticky-cart__action-quantity .xo-quantity {
  width: 100%;
  height: 100%;
  padding: 1.3rem 0.8rem;
  border: 0.1rem solid rgba(var(--color-button), 0.4);
  border: 0.1rem solid rgba(var(--color-button), 0.4);
}
@media (max-width: 767px) {
  .xo-sticky-cart__action-quantity .xo-quantity {
    padding: 1rem 0.8rem;
  }
}
.xo-sticky-cart__action-quantity .xo-quantity--radius {
  border-radius: var(--button-radius);
}
.xo-sticky-cart__action-quantity .xo-quantity--radius .xo-quantity__button {
  border-radius: 50%;
}
.xo-sticky-cart__action-quantity .xo-quantity__number {
  color: color-mix(in srgb, rgba(var(--color-button)) calc(1 * 100%), transparent);
  font-size: calc(var(--font-body-scale) * 1.5rem);
  line-height: calc(1 + 0.45 / var(--font-body-scale));
  letter-spacing: calc(var(--font-body-scale) * -0.0015rem);
}
@media (min-width: 768px) {
  .xo-sticky-cart__action-quantity .xo-quantity__number {
    font-size: calc(var(--font-body-scale) * 1.6rem);
    line-height: calc(1 + 0.45 / var(--font-body-scale));
    letter-spacing: calc(var(--font-body-scale) * -0.016rem);
  }
}
.xo-sticky-cart__action-quantity .xo-quantity__button {
  padding: 0.8rem;
  transition: all 0.3s ease-in-out;
}
.xo-sticky-cart__action-quantity .xo-quantity__button:hover {
  background-color: color-mix(in srgb, rgba(var(--color-gray-button)) calc(1 * 100%), transparent);
  color: color-mix(in srgb, rgba(var(--color-gray-button-text)) calc(1 * 100%), transparent);
}
.xo-sticky-cart__action-quantity svg {
  color: color-mix(in srgb, rgba(var(--color-button)) calc(1 * 100%), transparent);
}

.xo-sticky-cart__button-add,
.xo-sticky-cart__button-text {
  width: 100%;
}
.xo-sticky-cart__button-add .xo-btn,
.xo-sticky-cart__button-text .xo-btn {
  width: 100%;
}

.xo-sticky-cart__action-cart .xo-btn {
  max-height: 6rem;
}

.xo-sticky-cart__button-add[xo-disabled] {
  cursor: not-allowed;
  opacity: 0.6;
}
.xo-sticky-cart__button-add[xo-disabled] .xo-btn {
  pointer-events: none;
}

.xo-sticky-cart__options .xo-sticky-cart__option {
  position: relative;
  display: flex;
  align-items: center;
  gap: 0.4rem;
  color: color-mix(in srgb, rgba(var(--color-foreground)) calc(1 * 100%), transparent);
  font-size: calc(var(--font-body-scale) * 1.4rem);
  font-weight: 500;
  line-height: calc(1 + 0.42 / var(--font-body-scale));
  opacity: 0.65;
}

.xo-sticky-cart__options--pd {
  padding-top: 0.4rem;
}

.xo-sticky-cart__modal::part(inner) {
  padding: 2rem 0;
}

@media (max-width: 767px) {
  .xo-sticky-cart__action-group--mobile .xo-btn__content {
    width: 100%;
    padding: 1.2rem 0.8rem;
  }
  .xo-sticky-cart__action-group--mobile .xo-btn__text {
    font-size: calc(var(--font-body-scale) * 1.4rem);
    padding: 0;
  }
}

